--- a/portfolioWebsite/src/main/resources/templates/register.html
+++ b/portfolioWebsite/src/main/resources/templates/register.html
@@ -43,6 +43,13 @@
                             	<a th:href="@{/portfolio/register}" class="read-more stretched-link"><span>등록 및 수정 페이지</span> <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div><!-- End Service Item -->
+
+                        <div id="width" class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+                            <div class="service-item item-indigo position-relative">
+                                <h3>Contact Me</h3>
+                            	<a th:href="@{/contact/register}" class="read-more stretched-link"><span>등록 및 수정 페이지</span> <i class="bi bi-arrow-right"></i></a>
+                            </div>
+                        </div><!-- End Service Item -->
                     </div>
                 </div>
             </div>
