--- a/portfolioWebsite/src/main/resources/templates/about.html
+++ b/portfolioWebsite/src/main/resources/templates/about.html
@@ -4,14 +4,17 @@
 <head>
     <title>About Me 페이지</title>
     <style>
-    	#main { padding-top : 60px; }
+    	#main { 
+    		padding-top : 60px; 
+    		white-space: pre-wrap;
+		}
+    	
     </style>
 </head>
 
 <body class="index-page">
     <div layout:fragment="content">
         <div id="main" class="main">
-
             <!-- About Section -->
             <div id="about" class="about section">
                 <div class="container" data-aos="fade-up">
@@ -28,7 +31,6 @@
                 </div>
             </div>
             <!-- /About Section -->
-            
         </div>
     </div>
 </body>
