--- a/portfolioWebsite/src/main/resources/templates/contact.html
+++ b/portfolioWebsite/src/main/resources/templates/contact.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en" layout:decorate="~{index}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="en" layout:decorate="~{index}">
 
 <head>
     <title>Contact Me</title>
     <style>
     	#main { padding-top : 60px; }
+    	.info-item p { white-space: pre-wrap; }
+    	.php-email-form .error-message {
+		  display: block;
+		  background: #df1529;
+		  color: #ffffff;
+		  text-align: left;
+		  padding: 15px;
+		  margin-bottom: 24px;
+		  font-weight: 600;
+		}
+		
+		.php-email-form .sent-message {
+		  display: block;
+		  color: #ffffff;
+		  background: #059652;
+		  text-align: center;
+		  padding: 15px;
+		  margin-bottom: 24px;
+		  font-weight: 600;
+		}
     </style>
 </head>
 
@@ -31,7 +51,7 @@
                                     <div class="info-item" data-aos="fade" data-aos-delay="200">
                                         <i class="bi bi-geo-alt"></i>
                                         <h3>Address</h3>
-                                        <p>인천 남동구 구월동 1554</p>
+                                        <p th:if="${contact != null}" th:text="${contact.addr}"></p>
                                     </div>
                                 </div><!-- End Info Item -->
 
@@ -39,7 +59,7 @@
                                     <div class="info-item" data-aos="fade" data-aos-delay="300">
                                         <i class="bi bi-telephone"></i>
                                         <h3>Call Me</h3>
-                                        <p>+82 010 4175 6818</p>
+                                        <p th:if="${contact != null}" th:text="${contact.tel}"></p>
                                     </div>
                                 </div><!-- End Info Item -->
 
@@ -47,8 +67,7 @@
                                     <div class="info-item" data-aos="fade" data-aos-delay="400">
                                         <i class="bi bi-envelope"></i>
                                         <h3>Email Me</h3>
-                                        <p>h_leopold@naver.com</p>
-                                        <p>ha01821113@gmail.com</p>
+                                        <p th:if="${contact != null}" th:text="${contact.email}"></p>
                                     </div>
                                 </div><!-- End Info Item -->
 
@@ -56,8 +75,7 @@
                                     <div class="info-item" data-aos="fade" data-aos-delay="500">
                                         <i class="bi bi-clock"></i>
                                         <h3>Open Hours</h3>
-                                        <p>Monday - Sunday</p>
-                                        <p>8:00AM - 23:00PM</p>
+                                        <p th:if="${contact != null}" th:text="${contact.openHours}"></p>
                                     </div>
                                 </div><!-- End Info Item -->
 
@@ -66,9 +84,8 @@
                         </div>
 
                         <div class="col-lg-6">
-                            <form action="/static/bootstrap/forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+                            <form th:action="@{/contact/send}" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                                 <div class="row gy-4">
-
                                     <div class="col-md-6">
                                         <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
                                     </div>
@@ -86,24 +103,38 @@
                                     </div>
 
                                     <div class="col-12 text-center">
+                                    	<!-- 메시지 표시 부분 -->
                                         <div class="loading">Loading</div>
-                                        <div class="error-message"></div>
-                                        <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                                        <button type="submit">Send Message</button>
+                                        <div class="error-message" th:if="${messageType == 'error'}" th:text="${message}">Failed to send your message. Please try again.</div>
+									    <div class="sent-message" th:if="${messageType == 'success'}" th:text="${message}">Your message has been sent. Thank you!</div>
+									    <button type="submit">Send Message</button>
                                     </div>
-
                                 </div>
                             </form>
                         </div><!-- End Contact Form -->
-
                     </div>
-
                 </div>
-
             </div><!-- /Contact Section -->
         </div>
     </div>
+	<script>
+	    document.addEventListener("DOMContentLoaded", function() {
+		    var sentMessage = document.querySelector(".sent-message");
+		    var errorMessage = document.querySelector(".error-message");
+		
+		    // 성공 메시지와 실패 메시지 중 하나가 존재할 경우 처리
+		    if (sentMessage || errorMessage) {
+		        var messageToShow = sentMessage || errorMessage; // 존재하는 메시지를 선택
+		        messageToShow.style.display = "block"; // 메시지를 보이게 함
+		
+		        setTimeout(function() {
+		            messageToShow.style.display = "none"; // 5초 후에 숨김
+		        }, 5000);
+		    }
+		});
+
+	</script>
+
 </body>
 
 </html>
