--- a/portfolioWebsite/src/main/resources/templates/index.html
+++ b/portfolioWebsite/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 
 
     <div id="footer" class="footer">
-        <div class="container footer-top">
+        <!--<div class="container footer-top">
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 footer-about">
                     <a href="home.html" class="d-flex align-items-center">
@@ -87,7 +87,7 @@
                     	<li></li>
                     	<li></li>
                     	<li></li>
-                        <!--<li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>-->
+                        <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
                     </ul>
                 </div>
 
@@ -106,14 +106,13 @@
                     <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
                     <div class="social-links d-flex">
                         <a href="https://github.com/backendVirtuoso"><i class="bi bi-github"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-twitter-x"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.instagram.com/jh0813_/"><i class="bi bi-instagram"></i></a>
+                        <a href="mailto:h_leopold@naver.com"><i class="bi bi-envelope-fill icon" ></i></a>
                     </div>
                 </div>
 
             </div>
-        </div>
+        </div>-->
 
         <div class="container copyright text-center mt-4">
             <p>© <span>Copyright</span> <strong class="px-1 sitename">FlexStart</strong> <span>All Rights Reserved</span></p>
@@ -133,7 +132,6 @@
 
     <!-- Vendor JS Files -->
     <script src="/static/bootstrap/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/bootstrap/assets/vendor/php-email-form/validate.js"></script>
     <script src="/static/bootstrap/assets/vendor/aos/aos.js"></script>
     <script src="/static/bootstrap/assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="/static/bootstrap/assets/vendor/purecounter/purecounter_vanilla.js"></script>
