--- a/portfolioWebsite/src/main/resources/templates/portfolio.html
+++ b/portfolioWebsite/src/main/resources/templates/portfolio.html
@@ -18,13 +18,11 @@
                 <!-- Section Title -->
                 <div class="container section-title" data-aos="fade-up">
                     <h2>Portfolio</h2>
-                    <p>Check our latest work</p>
+                    <p>현재까지 작업한 포트폴리오</p>
                 </div><!-- End Section Title -->
 
                 <div class="container">
-
                     <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
                         <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
                             <li data-filter="*" class="filter-active">All</li>
                             <li data-filter=".filter-team">Team</li>
@@ -34,7 +32,7 @@
                         <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
 							<!-- Portfolio Items -->
-                            <div th:each="item : ${portfolioItems}" th:classappend="${item.type == 'individual'} ? 'filter-individual' : 'filter-team'" class="col-lg-4 col-md-6 portfolio-item isotope-item">
+                            <div th:each="item : ${portfolio}" th:classappend="${item.type == 'individual'} ? 'filter-individual' : 'filter-team'" class="col-lg-4 col-md-6 portfolio-item isotope-item">
                                 <div class="portfolio-content h-100">
                                     <img th:src="@{/portfolio/{imgUrl}(imgUrl=${item.firstImagePath})}" class="img-fluid" alt="">
                                     <div class="portfolio-info">
@@ -45,23 +43,21 @@
                                 </div>
                             </div><!-- End Portfolio Item -->
                             
-                            <!-- 이 div 태그는 로그인한 사용자만 보일 수 있도록 변경할 것 -->
-                            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-individual">
-                                <div class="portfolio-content h-100">
-                                    <img src="/static/bootstrap/assets/img/portfolio/registerProject.jpg" class="img-fluid" alt="">
-                                    <div class="portfolio-info">
-                                        <h4>Register</h4>
-                                        <a href="/static/bootstrap/assets/img/portfolio/registerProject.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                        <a th:href="@{/portfolio/register}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            
+                            <!-- 로그인한 사용자만 보일 수 있도록 조건 추가 -->
+							<div th:if="${#authentication.principal != null}" sec:authorize="isAuthenticated()" class="col-lg-4 col-md-6 portfolio-item isotope-item filter-individual">
+							    <div class="portfolio-content h-100">
+							        <img src="/static/bootstrap/assets/img/portfolio/registerProject.jpg" class="img-fluid" alt="">
+							        <div class="portfolio-info">
+							            <h4>Register</h4>
+							            <a href="/static/bootstrap/assets/img/portfolio/registerProject.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+							            <a th:href="@{/portfolio/register}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+							        </div>
+							    </div>
+							</div>
                         </div><!-- End Portfolio Container -->
                     </div>
                 </div>
             </div><!-- /Portfolio Section -->
-            
         </div>
     </div>
 </body>
