--- a/portfolioWebsite/src/main/resources/templates/about.html
+++ b/portfolioWebsite/src/main/resources/templates/about.html
@@ -25,7 +25,7 @@
                             <p th:text="${about.content}"></p>
                         </div>
                         <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-                            <img th:src="@{/about/{imgUrl}(imgUrl=${about.imgUrl})}" class="img-fluid" alt="" style="width:500px;">
+                            <img th:src="@{/static/bootstrap/assets/img/about/{imgUrl}(imgUrl=${about.imgUrl})}" class="img-fluid" alt="" style="width:500px;">
                         </div>
                     </div>
                 </div>
