--- a/portfolioWebsite/src/main/resources/templates/portfolio.html
+++ b/portfolioWebsite/src/main/resources/templates/portfolio.html
@@ -34,10 +34,10 @@
 							<!-- Portfolio Items -->
                             <div th:each="item : ${portfolio}" th:classappend="${item.type == 'individual'} ? 'filter-individual' : 'filter-team'" class="col-lg-6 col-md-6 portfolio-item isotope-item">
                                 <div class="portfolio-content h-100">
-                                    <img th:src="@{/portfolio/{imgUrl}(imgUrl=${item.firstImagePath})}" class="img-fluid" alt="">
+                                    <img th:src="@{/static/bootstrap/assets/img/portfolio/{imgUrl}(imgUrl=${item.firstImagePath})}" class="img-fluid" alt="">
                                     <div class="portfolio-info">
                                         <h4 th:text="${item.type}"></h4>
-                                        <a th:href="@{/portfolio/{imgUrl}(imgUrl=${item.firstImagePath})}" title="Preview" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                        <a th:href="@{/static/bootstrap/assets/img/portfolio/{imgUrl}(imgUrl=${item.firstImagePath})}" title="Preview" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                         <a th:href="@{/portfolio/details/{id}(id=${item.id})}" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                                     </div>
                                 </div>
