--- a/portfolioWebsite/src/main/resources/templates/signup_form.html
+++ b/portfolioWebsite/src/main/resources/templates/signup_form.html
@@ -49,9 +49,9 @@
                     <label for="userId" class="form-label">아이디</label>
                     <input type="text" class="form-control" id="userId" name="userId" th:field="*{userId}" placeholder="아이디 영문 3~25자">
                     <div th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" class="text-danger mt-2"></div>
-                    <button type="button" class="btn btn-secondary" onclick="checkLoginId()">중복확인</button>
+                    <!--<button type="button" class="btn btn-secondary" onclick="checkLoginId()">중복확인</button>
 					<div id="checkResult" class="validation-message"></div>
-					<div id="loginIdValidation" class="validation-message"></div>
+					<div id="loginIdValidation" class="validation-message"></div>-->
 				</div>
                 <div class="mb-3">
                     <label for="password1" class="form-label">비밀번호</label>
