--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -238,7 +238,7 @@
                         <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
 							<!-- Portfolio Items -->
-                            <div th:each="item : ${portfolio}" th:classappend="${item.type == 'individual'} ? 'filter-individual' : 'filter-team'" class="col-lg-6 col-md-6 portfolio-item isotope-item">
+                            <div th:each="item : ${portfolio}" th:classappend="${item.type == 'Individual'} ? 'filter-individual' : 'filter-team'" class="col-lg-6 col-md-6 portfolio-item isotope-item">
                                 <div class="portfolio-content h-100">
                                     <img th:src="@{/static/bootstrap/assets/img/portfolio/{imgUrl}(imgUrl=${item.firstImagePath})}" class="img-fluid" alt="">
                                     <div class="portfolio-info">
