--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,54 +80,6 @@
 
 
     <div id="footer" class="footer">
-        <!--<div class="container footer-top">
-            <div class="row gy-4">
-                <div class="col-lg-4 col-md-6 footer-about">
-                    <a href="home.html" class="d-flex align-items-center">
-                        <span class="sitename">HJH's Portfolio</span>
-                    </a>
-                    <div class="footer-contact pt-3">
-                        <p>인천 남동구 구월동 1554 이하 개인정보</p>
-                        <p class="mt-3"><strong>Phone:</strong> <span>+82 010 4175 6818</span></p>
-                        <p><strong>Email:</strong> <span>h_leopold@naver.com</span></p>
-                    </div>
-                </div>
-                
-                <div class="col-lg-2 col-md-3 footer-links">
-                    <h4> </h4>
-                    <ul>
-                    	<li></li>
-                    	<li></li>
-                    	<li></li>
-                    	<li></li>
-                    	<li></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-                    </ul>
-                </div>
-
-				<div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Useful Links</h4>
-                    <ul>
-                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/home}">Home</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/about}">About us</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/tech-stack}">Services</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a th:href="@{/portfolio-details}">Terms of service</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-4 col-md-12">
-                    <h4>Follow Me</h4>
-                    <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-                    <div class="social-links d-flex">
-                        <a href="https://github.com/backendVirtuoso"><i class="bi bi-github"></i></a>
-                        <a href="https://www.instagram.com/jh0813_/"><i class="bi bi-instagram"></i></a>
-                        <a href="mailto:h_leopold@naver.com"><i class="bi bi-envelope-fill icon" ></i></a>
-                    </div>
-                </div>
-
-            </div>
-        </div>-->
-
         <div class="container copyright text-center mt-4">
 	        	<div class="social-links d-flex" >
 	                <a href="https://github.com/backendVirtuoso"><i class="bi bi-github"></i></a>
@@ -143,7 +95,6 @@
                 Designed by <a href="#">BootstrapMade</a>
             </div>
         </div>
-
     </div>
 
     <!-- Scroll Top -->
@@ -151,7 +102,7 @@
 
     <!-- Vendor JS Files -->
     <script src="/static/bootstrap/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/bootstrap/assets/vendor/aos/aos.js"></script>
+    <script src="/static/bootst rap/assets/vendor/aos/aos.js"></script>
     <script src="/static/bootstrap/assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="/static/bootstrap/assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="/static/bootstrap/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
