--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,7 @@
 
     <!-- Vendor JS Files -->
     <script src="/static/bootstrap/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/bootst rap/assets/vendor/aos/aos.js"></script>
+    <script src="/static/bootstrap/assets/vendor/aos/aos.js"></script>
     <script src="/static/bootstrap/assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="/static/bootstrap/assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="/static/bootstrap/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
