--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -19,13 +19,13 @@
             <div id="about" class="about section">
                 <div class="container" data-aos="fade-up">
                     <div class="row gx-0">
-                        <div class="col-lg-6 d-flex flex-column justify-content-center content" data-aos="fade-up" data-aos-delay="200">
+                        <div class="col-lg-8 d-flex flex-column justify-content-center content" data-aos="fade-up" data-aos-delay="200">
                             <h3>About Me</h3>
                             <h2 th:text="${about.title}"></h2>
                             <p th:text="${about.content}"></p>
                         </div>
-                        <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-                            <img th:src="@{/static/bootstrap/assets/img/about/{imgUrl}(imgUrl=${about.imgUrl})}" class="img-fluid" alt="" style="width:500px;">
+                        <div class="col-lg-4 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
+                            <img th:src="@{/static/bootstrap/assets/img/about/{imgUrl}(imgUrl=${about.imgUrl})}" alt="" style="width: 298px; float: right;" class="rounded-circle img-fluid">
                         </div>
                     </div>
                 </div>
