프로젝트 코드 수정
footer, uri(스크롤 이동) 수정

--- a/src/main/resources/templates/presentation/fragments/fragment-footer.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-footer.html
@@ -10,8 +10,6 @@
 					<span class="sitename">HJH's Portfolio</span>
 				</a>
 				<div class="footer-contact pt-3">
-					<p>address secret</p>
-					<p>address secret</p>
 					<p class="mt-3"><strong>Phone:</strong> <span>+82 phone number secret</span></p>
 					<p><strong>Email:</strong> <span>h_leopold@naver.com</span></p>
 				</div>
@@ -20,20 +18,28 @@
 			<div class="col-lg-2 col-md-3 footer-links">
 				<h4>Useful Links</h4>
 				<ul>
-					<li><i class="bi bi-chevron-right"></i> <a th:href="@{/}">Home</a></li>
-					<li><i class="bi bi-chevron-right"></i> <a th:href="@{/about}">About me</a></li>
-					<li><i class="bi bi-chevron-right"></i> <a th:href="@{/tech-stack}">Skill</a></li>
-					<li><i class="bi bi-chevron-right"></i> <a th:href="@{/projects}">Projects</a></li>
+					<li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
+					<li><i class="bi bi-chevron-right"></i> <a href="#about">About me</a></li>
+				</ul>
+			</div>
+
+			<div class="col-lg-2 col-md-3 footer-links">
+				<h4>Useful Links</h4>
+				<ul>
+					<li><i class="bi bi-chevron-right"></i> <a href="#skill">Skill</a></li>
+					<li><i class="bi bi-chevron-right"></i> <a href="#portfolio">Portfolio</a></li>
+					<li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact Me</a></li>
 				</ul>
 			</div>
 
 			<div class="col-lg-4 col-md-12">
 				<h4>Follow Me</h4>
-				<p>문구 추천 받습니다.</p>
+				<p>도전과 성장을 추구하는 백엔드 개발자입니다.</p>
 				<div class="social-links d-flex" >
-					<a href="https://github.com/backendVirtuoso"><i class="bi bi-github"></i></a>
-					<a href="https://www.instagram.com/jh0813_/"><i class="bi bi-instagram"></i></a>
-					<a href="mailto:h_leopold@naver.com"><i class="bi bi-envelope-fill icon" ></i></a>
+					<a href="https://github.com/backendVirtuoso" target="_blank"><i class="bi bi-github"></i></a>
+					<a href="https://www.instagram.com/jh0813_/" target="_blank"><i class="bi bi-instagram"></i></a>
+					<a href="mailto:h_leopold@naver.com" target="_blank"><i class="bi bi-envelope-fill icon" ></i></a>
+					<a href="https://backendvirtuoso.github.io/" target="_blank"><i class="bi bi-journal"></i></a>
 				</div>
 			</div>
 		</div>
