--- a/src/main/resources/templates/presentation/fragments/fragment-home.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <body>
-	<!-- Home Section (타이핑 메인 화면(100%) -->
+	<!-- Home Section (타이핑 메인 화면(100%)) -->
 	<section id="hero" class="hero section" th:fragment="home">
 		<div class="container" id="typing">
 			<div class="row gy-4">
