--- a/src/main/resources/templates/presentation/fragments/fragment-portfolio.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-portfolio.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <body>
 	<!-- Portfolio Section -->
-	<section id="portfolio" class="portfolio section" th:fragment="project">
+	<section id="portfolio" class="portfolio section" th:fragment="portfolio">
 
 		<!-- Section Title -->
 		<div class="container section-title" data-aos="fade-up">
