--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -9,7 +9,7 @@
 		<div th:replace="~{presentation/fragments/fragment-home :: home}"></div>
 		<div th:replace="~{presentation/fragments/fragment-about :: about}"></div>
 		<div th:replace="~{presentation/fragments/fragment-skill :: skill}"></div>
-		<div th:replace="~{presentation/fragments/fragment-project :: project}"></div>
+		<div th:replace="~{presentation/fragments/fragment-portfolio :: portfolio}"></div>
 		<div th:replace="~{presentation/fragments/fragment-contact :: contact}"></div>
 	</main>
 
@@ -29,6 +29,6 @@
 
 	<!-- Main JS File -->
 	<script src="/static/assets/js/main.js"></script>
-	<script src="/static/assets/js/section-scroll.js"></script>
+	<script src="/static/assets/js/smooth-scroll.js"></script>
 </body>
 </html>
