--- a/src/main/resources/templates/presentation/fragments/fragment-navigation.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-navigation.html
@@ -10,11 +10,11 @@
 
 		<nav id="navmenu" class="navmenu">
 			<ul>
-				<li><a th:href="@{/}" class="active">Home<br></a></li>
-				<li><a th:href="@{/about}">About</a></li>
-				<li><a th:href="@{/tech-stack}">Skill</a></li>
-				<li><a th:href="@{/projects}">Portfolio</a></li>
-				<li><a th:href="@{/contact}">Contact</a></li>
+				<li><a href="#hero" class="nav-link active" data-section="hero">Home</a></li>
+				<li><a href="#about" class="nav-link" data-section="about">About</a></li>
+				<li><a href="#services" class="nav-link" data-section="services">Skill</a></li>
+				<li><a href="#portfolio" class="nav-link" data-section="portfolio">Portfolio</a></li>
+				<li><a href="#contact" class="nav-link" data-section="contact">Contact</a></li>
 			</ul>
 			<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 		</nav>
