--- a/src/main/resources/templates/presentation/fragments/fragment-footer.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-footer.html
@@ -10,7 +10,7 @@
 					<span class="sitename">HJH's Portfolio</span>
 				</a>
 				<div class="footer-contact pt-3">
-					<p class="mt-3"><strong>Phone:</strong> <span>+82 phone number secret</span></p>
+					<p class="mt-3"><strong>Phone:</strong> <span>+82 010-4175-6818</span></p>
 					<p><strong>Email:</strong> <span>h_leopold@naver.com</span></p>
 				</div>
 			</div>
